# MultiTenant_CCL

./: .gitignore  README.md  debug_harmonics.py  debug_ilp.py  experiment_results.json  inspect_params.py  main.py  plot_results.py  pyproject.toml  run_experiments.py  run_simulation.py  setup.py  test_cg_vs_ilp.py  test_scalability.py
CCL_Simulator/simcore/: types.py
CCL_Simulator/simcore_cpp/: bindings.cpp  nodes.hpp  policy.hpp  port.hpp  sim.hpp  types.hpp
multitenant/: __init__.py  config.py  diagnostics.py  plotting.py  topology.py  workloads.py
multitenant/baselines/: __init__.py  harmonics.py  leaf_local.py
multitenant/experiments/: __init__.py  runner.py
multitenant/simulator/: __init__.py  adapter.py  worker.py
multitenant/solvers/: __init__.py  mapping_cg.py  mapping_ilp.py
scripts/: debug_harmonics_baseline.py  debug_proposed_mapping_ilp.py  inspect_topology.py  plot_baseline_vs_proposed_mapping.py  run_baseline_vs_proposed_mapping.py  run_proposed_mapping_large_scale.py  run_proposed_mapping_small_scale.py
utils/: CG_solver.py  Harmonics_tools.py  ILP_tools.py  debug_harmonics.py  draw.py  simulation.py  tools.py
